Fixed PPS overlap with upgrades

--- a/widget_attempt_53.css
+++ b/widget_attempt_53.css
@@ -113,7 +113,7 @@ body {
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
     left: 50%;
-    transform: translate(-50%)
+    transform: translate(-100%)
 }
 
 .texts {
